<resources>
    <string name="app_name">Lifeathon</string>
    <string name="logo">logo</string>
    <string name="project_1">CraftBot</string>
    <string name="project_2">Par-Boiler</string>
    <string name="project_3">Rubber Tapping</string>
    <string name="project_4">Sanitary Napkin</string>
    <string name="project_title">Project Title 1</string>
    <string name="team_memers_and_college_info">Team Memers and College info</string>
    <string name="todo">TODO</string>
    <string name="project_title_string_project_2">Par-Boiler</string>
    <string name="blah">An intelligent assistant for fruitful cultivation is a need of farming community. Design a bot that can plough, water, and plant saplings on barren lands. The Croftbot should be able to measure the pH, NPK, moisture content etc in order to provide a sundry of nutrients to make the land arable.</string>
    <string name="blah2">Traditional method of parboiling by farmers involves soaking, steaming, drying and milling. But as it is a time consuming and highly laborious process, common man rather prefer rice readily available. Design a compact temperature based paddy rice parboiler for homemaker.</string>
    <string name="blah3">Due to complex nature of rubber tapping, skilled labour is required. High labour price is another added disadvantage.
An automated rubber taping instrument for day to day collection needs to be designed and put in place.</string>
    <string name="blah4">Menstrual hygiene is a major problem for all women alike but becomes more acute for women having conditions like paralysis, autism, stunted mental growth, etc. Wearing pads for prolonged intervals of time, causes skin rashes and vaginal infections. Sanitary napkins that can provide alerts to the caretakers, when it is soiled, needs to be developed.</string>
    <string name="project_title_string_project_3">Rubber Tapping</string>
    <string name="project_title_string_project_4">Sanitary Napkin</string>
    <string name="croftbot_string_project_2">CroftBot</string>
    <string name="aries">Team ARIES\nKamalanathan N\n
kamal.rkara@gmail.com\n
8547106410\n
MES College of Engineering, Kuttippuram</string>
    <string name="Asquares">Team ASQUARES\nSooryadevkishan P S\n
sooryadevkishan@gmail.com\n
8281072232\n
Christ College of Engineering, Irinjalakuda</string>
    <string name="Ilahia">Team ILAHIA\n
Jishnu K D\n
jishnukd123@gmail.com\n
9645544530\n
Illahia College of Engineering and Technology, Kothamangalam</string>
    <string name="Lyza">Team Lyza\n
Ajaz F\n
ajazf09@gmail.com\n
9495680789\n
Jyothi engineering college, cheruthuruthy
</string>
</resources>
