<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/life" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/bt1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="bt1o"
            android:text="@string/project_1" />

        <Button
            android:id="@+id/bt2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="bt2o"
            android:text="@string/project_2" />

        <Button
            android:id="@+id/bt3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="bt3o"
            android:text="@string/project_3" />

        <Button
            android:id="@+id/bt4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="bt4o"
            android:text="@string/project_4" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/p1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="0dp"
                android:paddingTop="5dp"
                android:text="@string/croftbot_string_project_2"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="451dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/robo2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/blah"
                    android:textColor="#000"
                    android:textSize="24sp" />

            </LinearLayout>

            <VideoView
                android:id="@+id/testved"
                android:layout_width="930dp"
                android:layout_height="350dp"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:text="@string/aries"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/p2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="0dp"
                android:paddingTop="5dp"
                android:text="@string/project_title_string_project_2"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/btn_star_big_on" />

                <TextView
                    android:id="@+id/txt."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/blah"
                    android:textColor="#000"
                    android:textSize="18sp" />

            </LinearLayout>

            <VideoView
                android:id="@+id/vdo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="none" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@android:drawable/presence_video_away" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/team_memers_and_college_info"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/p3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="0dp"
                android:paddingTop="5dp"
                android:text="@string/project_title_string_project_3"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/btn_star_big_on" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/blah"
                    android:textColor="#000"
                    android:textSize="18sp" />

            </LinearLayout>

            <VideoView
                android:id="@+id/vdo3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="none" />

            <ImageView
                android:id="@+id/img3.1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@android:drawable/presence_video_away" />

            <TextView
                android:id="@+id/txt3.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/team_memers_and_college_info"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/p4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="0dp"
                android:paddingTop="5dp"
                android:text="@string/project_title_string_project_4"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/im4"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/btn_star_big_on" />

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/blah"
                    android:textColor="#000"
                    android:textSize="18sp" />

            </LinearLayout>

            <VideoView
                android:id="@+id/video4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="none" />

            <ImageView
                android:id="@+id/img4.1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@android:drawable/presence_video_away" />

            <TextView
                android:id="@+id/txt4.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/team_memers_and_college_info"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/expv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/robo2" />

</android.support.constraint.ConstraintLayout>